--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harry Potter Fan Page</title>
+    <link rel="stylesheet" href="/static/style/index.css">
 </head>
 <body>
-    <h1>You will find whatever related to Harry Potter in here</h1>
+    <main>
+        <video autoplay muted loop id="video-background">
+            <source src="/static/videos/hogwarts2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="overlay"></div>
+        <div class="hero">
+            <h1>In memory of Hogwarts, the school of <span>sorcerers</span>, <span>magic</span>, and <span>adventures.</span></h1>
+            <p></p>
+        </div>
+    </main>
 </body>
 </html>
